# ai-tools

./: .gitignore  README.md  pyproject.toml  semantic-search.py
docs/: index.md  index.org  installation.org  usage.org
foo/: chroma.sqlite3
src/: chat.py  config.py  doc_splitter.py  embeddings_build.py  main.py  typer_annotations.py  visualize.py
src/embeddings/: build.py  text_splitters.py
src/text_processing/: doc_splitter.py
