[tool.poetry]
name = "ai-tools"
version = "0.1.0"
description = ""
authors = ["ryan <exogenesis@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.2.1"
tqdm = "^4.66.4"
chromadb = "^0.5.3"
typer = "^0.12.3"
langchain-community = "^0.2.6"
langchain-text-splitters = "^0.2.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
jupyter = "^1.0.0"
basedpyright = "^1.13.1"
ptpython = "^3.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
