[tool.poetry]
name = "ai-tools"
version = "0.1.0"
description = ""
authors = ["ryan <exogenesis@protonmail.com>"]
readme = "README.md"
packages = [ {include = "*", from="src"} ]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ollama = "^0.2.1"
tqdm = "^4.66.4"
chromadb = "^0.5.3"
typer = "^0.12.3"
langchain-community = "^0.2.6"
langchain-text-splitters = "^0.2.2"
toml = "^0.10.2"
unstructured = {extras = ["md"], version = "^0.14.9"}
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
umap-learn = "^0.5.6"
pyqt6 = "^6.7.0"
bokeh = "^3.4.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
jupyter = "^1.0.0"
basedpyright = "^1.13.1"
ptpython = "^3.0.27"

[build-system]
requires = ["poetry-core", "src"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai-tools = "main:app"
